--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>SpymapBackend</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>ServerlistConnector</name>
+    <name>Spymap Backend</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -28,6 +28,33 @@
             </snapshots>
         </repository>
     </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.lowagie.text</groupId>
+            <artifactId>Document</artifactId>
+            <version>2.0.8</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/iText-2.0.8.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.xhtmlrenderer</groupId>
+            <artifactId>DefaultCSSMarker</artifactId>
+            <version>R8</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/core-renderer-R8.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
